# hotfix

./: .gitignore  Cargo.toml  LICENSE  README.md  codecov.yml  example.compose.yml
.github/workflows/: ci.yml  lint-pr-title.yml
crates/hotfix/: CHANGELOG.md  Cargo.toml
crates/hotfix-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/hotfix-cli/src/: lib.rs  main.rs
crates/hotfix-cli/tests/: integration.rs
crates/hotfix-codegen/: CHANGELOG.md  Cargo.toml
crates/hotfix-codegen/src/: lib.rs
crates/hotfix-derive/: CHANGELOG.md  Cargo.toml
crates/hotfix-derive/src/: derive_fix_value.rs  lib.rs
crates/hotfix-dictionary/: CHANGELOG.md  Cargo.toml
crates/hotfix-dictionary/src/: builder.rs  component.rs  datatype.rs  dictionary.rs  field.rs  layout.rs  lib.rs  message_definition.rs  quickfix.rs  string.rs
crates/hotfix-message/: CHANGELOG.md  Cargo.toml  build.rs
crates/hotfix-message/benches/: message_parsing.rs
crates/hotfix-message/src/: builder.rs  encoder.rs  encoding.rs  error.rs  lib.rs  message.rs  parsed_message.rs  parser.rs  session_fields.rs  tags.rs
crates/hotfix-message/src/encoding/: buffer.rs  definitions.rs  field_access.rs  field_types.rs
crates/hotfix-message/src/encoding/field_types/: date.rs  monthyear.rs  tagu32.rs  time.rs  timestamp.rs  utils_chrono.rs
crates/hotfix-message/src/parts/: body.rs  header.rs  repeating_group.rs  trailer.rs
crates/hotfix-status/: CHANGELOG.md  Cargo.toml
crates/hotfix-status/src/: api.rs  data_provider.rs  error.rs  lib.rs  ui.rs
crates/hotfix-status/src/ui/: assets.rs  dashboard.rs
crates/hotfix-store/: CHANGELOG.md  Cargo.toml  README.md
crates/hotfix-store-mongodb/: CHANGELOG.md  Cargo.toml  README.md
crates/hotfix-store-mongodb/src/: lib.rs
crates/hotfix-store-mongodb/tests/: conformance.rs  mongodb_tests.rs
crates/hotfix-store/src/: error.rs  file.rs  in_memory.rs  lib.rs  test_utils.rs
crates/hotfix-store/tests/: conformance.rs  file_store_tests.rs
crates/hotfix-web/: CHANGELOG.md  Cargo.toml  README.md
crates/hotfix-web-ui/: CHANGELOG.md  Cargo.toml
crates/hotfix-web-ui/src/: assets.rs  dashboard.rs  error.rs  lib.rs
crates/hotfix-web-ui/templates/: dashboard.askama
crates/hotfix-web/src/: endpoints.rs  error.rs  lib.rs  session_controller.rs
crates/hotfix-web/src/endpoints/: admin.rs  health.rs  session_info.rs
crates/hotfix-web/src/endpoints/admin/: reset.rs  shutdown.rs
crates/hotfix/src/: application.rs  config.rs  error.rs  initiator.rs  lib.rs  message.rs  message_utils.rs  session.rs  session_schedule.rs  store.rs  transport.rs  wire_observer.rs
crates/hotfix/src/message/: business_reject.rs  heartbeat.rs  logon.rs  logout.rs  parser.rs  reject.rs  resend_request.rs  sequence_reset.rs  test_request.rs  verification.rs  verification_error.rs  verification_issue.rs
crates/hotfix/src/session/: admin_request.rs  ctx.rs  error.rs  event.rs  inbound.rs  info.rs  message.rs  message_handling.rs  outbound.rs  session_handle.rs  session_ref.rs  state.rs  test_utils.rs
crates/hotfix/src/session/state/: active.rs  awaiting_logon.rs  awaiting_logout.rs  awaiting_resend.rs  ctx.rs  disconnected.rs
crates/hotfix/src/store/: dynamodb.rs  error.rs  file.rs  in_memory.rs  mongodb.rs  redb.rs
crates/hotfix/src/transport/: connection.rs  reader.rs  socket.rs  socket_writer.rs  tls.rs
crates/hotfix/src/transport/socket/: socket_reader.rs  socket_writer.rs  tls.rs
crates/hotfix/tests/: common_store_tests.rs  file_store_tests.rs  mongodb_store_tests.rs  session_tests.rs  store_tests.rs
crates/hotfix/tests/common/: actions.rs  assertions.rs  cleanup.rs  mock_application.rs  mock_counterparty.rs  mod.rs  session_actions.rs  session_assertions.rs  setup.rs  test_messages.rs
crates/hotfix/tests/common/fakes/: fake_application.rs  fake_counterparty.rs  mod.rs  session_spy.rs
crates/hotfix/tests/connection_test_cases/: helpers.rs
crates/hotfix/tests/session_test_cases/: admin_request_tests.rs  business_reject_tests.rs  business_tests.rs  heartbeat_tests.rs  invalid_message_tests.rs  logon_tests.rs  logout_tests.rs  mod.rs  received_gap_fill_tests.rs  received_reset_tests.rs  resend_tests.rs  send_confirmation_tests.rs
crates/hotfix/tests/session_test_cases/common/: actions.rs  assertions.rs  setup.rs  test_messages.rs
crates/hotfix/tests/session_test_cases/common/fakes/: disconnected_session.rs  fake_application.rs  fake_counterparty.rs  mod.rs  session_spy.rs
crates/utils/: Cargo.toml
crates/utils/src/: update_version.rs
dummy-executor/: .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
dummy-executor/cmd/: executor.go
dummy-executor/config/: executor.cfg
examples/custom-fields/: Cargo.toml  README.md  build.rs
examples/custom-fields/config/: test-config.toml
examples/custom-fields/spec/: FIX44-custom.xml
examples/custom-fields/src/: application.rs  custom_fix.rs  main.rs  messages.rs
examples/load-testing/: Cargo.toml
examples/load-testing/src/: application.rs  main.rs  messages.rs
examples/order-entry/: Cargo.toml  Dockerfile  README.md
examples/order-entry/config/: test-config-docker.toml
examples/order-entry/src/: application.rs  main.rs  messages.rs  web.rs
examples/simple-new-order/: Cargo.toml  README.md  docker-compose.yml
examples/simple-new-order/config/: test-config.toml
examples/simple-new-order/src/: application.rs  main.rs  messages.rs
