[workspace]
members = [
    "crates/*",
    "examples/*",
]
resolver = "2"

[workspace.package]
version = "0.0.26"
authors = ["David Steiner <david_j_steiner@yahoo.co.nz>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Validus-Risk-Management/hotfix"
repository = "https://github.com/Validus-Risk-Management/hotfix"
keywords = ["fix", "fix-protocol", "finance", "trading", "fx"]
categories = ["finance", "encoding", "parsing"]

[workspace.dependencies]
anyhow = "^1.0.75"
askama = "0.14"
async-trait = "0.1.89"
axum = "^0.8"
chrono = "^0.4"
chrono-tz = "^0.10"
displaydoc = "0.2"
mime_guess = "2.0.5"
rust-embed = "8.7"
serde = "^1.0.177"
serde_json = "1.0.143"
thiserror = "1"
tokio = { version = "^1" }
tokio-rustls = "^0.26"
toml = "^0.8.8"
tower = "0.5"
tracing = "^0.1.37"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(doc_cfg)'] }
