[workspace]
members = [
    "crates/*",
    "examples/*",
]
resolver = "2"

[workspace.package]
authors = ["David Steiner <david_j_steiner@yahoo.co.nz>"]
edition = "2024"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Validus-Risk-Management/hotfix"
repository = "https://github.com/Validus-Risk-Management/hotfix"
keywords = ["fix", "fix-protocol", "finance", "trading", "fx"]
categories = ["finance", "encoding", "parsing"]

[workspace.dependencies]
anyhow = "^1.0.75"
assert_cmd = "2"
askama = "0.14"
async-trait = "0.1.89"
axum = "^0.8"
chrono = "^0.4"
chrono-tz = "^0.10"
clap = "4.5"
criterion = "0.7"
darling = "0.21"
displaydoc = "0.2"
fnv = "1"
futures = "0.3"
heck = "0.5"
indexmap = "2.12"
indoc = "2"
mime_guess = "2.0.5"
mongodb = "3.3"
owo-colors = "4"
predicates = "3"
proc-macro-crate = "3"
proc-macro2 = "1"
quickcheck = "1"
quickcheck_macros = "1"
quote = "1"
redb = "3.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
roxmltree = "0.21"
rust-embed = "8.7"
rustls = "0.23"
rustls-native-certs = "0.8"
rustls-pemfile = "2.2"
rustls-pki-types = { version = "1" }
webpki-roots = "1.0"
serde = "^1.0.177"
serde_json = "1.0.143"
smartstring = "1"
strum = "0.27"
strum_macros = "0.27"
syn = "2"
testcontainers = "0.25"
thiserror = "2"
tokio = { version = "1" }
tokio-rustls = "0.26"
tokio-util = "0.7"
toml = "0.9"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.5.0" }
wiremock = "0.6"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(doc_cfg)'] }
