[package]
name = "hotfix-cli"
description = "CLI tool for the HotFIX engine"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "hotfix"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
owo-colors.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
wiremock.workspace = true

[lints]
workspace = true
