[package]
name = "hotfix-codegen"
description = "Code generation for HotFIX."
readme = "./README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
chrono = "0.4"
hotfix-dictionary = { version = "0.0.23", path = "../hotfix-dictionary" }
fnv = "1"
heck = "0.4"
indoc = "2"

[dev-dependencies]
hotfix-dictionary = { version = "0.0.23", path = "../hotfix-dictionary", features = ["fix40", "fix41", "fix42", "fix43", "fix50"] }
syn = { version = "1", features = ["parsing"] }
