[package]
name = "hotfix-codegen"
description = "Code generation for HotFIX."
readme = "./README.md"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[dependencies]
hotfix-dictionary = { version = "0.1.0", path = "../hotfix-dictionary" }

chrono.workspace = true
fnv.workspace = true
heck.workspace = true
indoc.workspace = true

[dev-dependencies]
hotfix-dictionary = { version = "0.1.0", path = "../hotfix-dictionary", features = ["fix40", "fix41", "fix42", "fix43", "fix50"] }

syn = { workspace = true, features = ["full", "parsing"] }
