[package]
name = "hotfix-derive"
description = "Derive macros for HotFIX."
readme = "./README.md"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "hotfix_derive"
proc-macro = true

[lints]
workspace = true

[dependencies]
darling = "0.21"
proc-macro-crate = "3"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["derive", "parsing"] }
