[package]
name = "hotfix-derive"
description = "Derive macros for HotFIX."
readme = "./README.md"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "hotfix_derive"
proc-macro = true

[lints]
workspace = true

[dependencies]
darling.workspace = true
proc-macro-crate.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["derive", "parsing"] }
