[package]
name = "hotfix-dictionary"
description = "FIX dictionary generation for HotFIX."
readme = "./README.md"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
fix40 = []
fix41 = []
fix42 = []
fix43 = []
# FIX 4.4 is always enabled.
fix50 = []
fix50sp1 = []
fix50sp2 = []
fixt11 = []

[lints]
workspace = true

[dependencies]
fnv = "1"
roxmltree = "0.20"
smartstring = "1"
strum = "0.27"
strum_macros = "0.27"
