[package]
name = "hotfix-dictionary"
description = "FIX dictionary generation for HotFIX."
readme = "./README.md"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
fix40 = []
fix41 = []
fix42 = []
fix43 = []
# FIX 4.4 is always enabled.
fix50 = []
fix50sp1 = []
fix50sp2 = []
fixt11 = []

[lints]
workspace = true

[dependencies]
fnv.workspace = true
roxmltree.workspace = true
smartstring.workspace = true
strum.workspace = true
strum_macros.workspace = true
