[package]
name = "hotfix-dictionary"
description = "FIX dictionary generation for HotFIX."
readme = "./README.md"
version = "0.1.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["smartstring"]
fix40 = []
fix41 = []
fix42 = []
fix43 = []
# FIX 4.4 is always enabled.
fix50 = []
fix50sp1 = []
fix50sp2 = []
fixt11 = []
smartstring = ["dep:smartstring"]

[lints]
workspace = true

[dependencies]
fnv.workspace = true
roxmltree.workspace = true
smartstring = { workspace = true, optional = true }
strum.workspace = true
strum_macros.workspace = true
