[package]
name = "hotfix-message"
description = "FIX messages for HotFIX."
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
fix42 = ["hotfix-dictionary/fix42"]
utils-chrono = []

[lints]
workspace = true

[dependencies]
chrono = "0.4"
hotfix-derive = { version = "0.1.1", path = "../hotfix-derive" }
hotfix-dictionary = { version = "0.1.0", path = "../hotfix-dictionary" }
thiserror = { workspace = true }

[dev-dependencies]
anyhow = "1.0.75"
hotfix-dictionary = { version = "0.1.0", path = "../hotfix-dictionary", features = ["fix42"] }
quickcheck = "1"
quickcheck_macros = "1"

[build-dependencies]
chrono = "0.4"
hotfix-codegen = { version = "0.1.1", path = "../hotfix-codegen" }
hotfix-dictionary = { version = "0.1.0", path = "../hotfix-dictionary", features = ["fix42"] }
