[package]
name = "hotfix-message"
description = "FIX messages for HotFIX."
version = "0.2.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
fix42 = ["hotfix-dictionary/fix42"]
utils-chrono = []

[lints]
workspace = true

[dependencies]
hotfix-derive = { version = "0.1.2", path = "../hotfix-derive" }
hotfix-dictionary = { version = "0.1.3", path = "../hotfix-dictionary" }

anyhow.workspace = true
chrono.workspace = true
indexmap.workspace = true
thiserror.workspace = true

[dev-dependencies]
hotfix-dictionary = { version = "0.1.3", path = "../hotfix-dictionary", features = ["fix42"] }

anyhow.workspace = true
criterion.workspace = true
quickcheck.workspace = true
quickcheck_macros.workspace = true

[build-dependencies]
hotfix-codegen = { version = "0.1.4", path = "../hotfix-codegen" }
hotfix-dictionary = { version = "0.1.3", path = "../hotfix-dictionary", features = ["fix42"] }

chrono.workspace = true

[[bench]]
name = "message-parsing-benches"
harness = false
path = "benches/message_parsing.rs"
