[package]
name = "hotfix-status"
description = "Status endpoints and an option web-based dashboard for the HotFIX engine"
version = "0.1.3"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
ui = ["askama", "mime_guess", "rust-embed"]

[dependencies]
askama = { workspace = true, features = ["serde_json"], optional = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
displaydoc = { workspace = true }
hotfix = { version = "0.1.1", path = "../hotfix" }
mime_guess = { workspace = true, optional = true }
rust-embed = { workspace = true, features = ["axum-ex"], optional = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
