[package]
name = "hotfix-web-ui"
description = "Web dashboard UI components for the HotFIX engine"
version = "0.1.16"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
hotfix = { version = "0.10.0", path = "../hotfix" }

anyhow = { workspace = true }
askama = { workspace = true, features = ["serde_json"] }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
displaydoc = { workspace = true }
mime_guess = { workspace = true }
rust-embed = { workspace = true, features = ["axum-ex"] }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }

[lints]
workspace = true
