[package]
name = "hotfix-web"
description = "Web API and optional dashboard for the HotFIX engine"
version = "0.1.5"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[features]
ui = ["dep:hotfix-web-ui"]

[dependencies]
hotfix = { version = "0.4.3", path = "../hotfix" }
hotfix-web-ui = { version = "0.1.6", path = "../hotfix-web-ui", optional = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
displaydoc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
