[package]
name = "hotfix"
description = "Buy-side FIX engine written in pure Rust"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
redb = ["dep:redb"]
mongodb = ["dep:mongodb"]

[lints]
workspace = true

[dependencies]
hotfix-message = { version = "0.2.0", path = "../hotfix-message" }

anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
futures = { workspace = true }
mongodb = { workspace = true, optional = true }
rustls-pki-types = { workspace = true }
redb = { workspace = true, optional = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
testcontainers = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
