[package]
name = "hotfix"
description = "Buy-side FIX engine written in pure Rust"
version = "0.10.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["fix44", "test-utils"]
fix44 = ["hotfix-message/fix44"]
mongodb = ["dep:hotfix-store-mongodb"]
test-utils = ["hotfix-store/test-utils"]

[lints]
workspace = true

[dependencies]
hotfix-message = { version = "0.3.2", path = "../hotfix-message", features = ["utils-chrono"] }
hotfix-store = { version = "0.1.1", path = "../hotfix-store" }
hotfix-store-mongodb = { version = "0.1.3", path = "../hotfix-store-mongodb", optional = true }

async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
rustls-pki-types = { workspace = true }
rustls = { workspace = true }
rustls-native-certs = { workspace = true }
rustls-pemfile = { workspace = true }
webpki-roots = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rustls = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
hotfix-message = { version = "0.3.2", path = "../hotfix-message", features = ["fix44", "utils-chrono"] }

anyhow = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
