[package]
name = "custom-fields"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
hotfix = { path = "../../crates/hotfix" }
hotfix-message = { path = "../../crates/hotfix-message" }

anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[build-dependencies]
hotfix-codegen = { path = "../../crates/hotfix-codegen" }
hotfix-dictionary = { path = "../../crates/hotfix-dictionary" }
