[package]
name = "order-entry"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
hotfix = { path = "../../crates/hotfix", features = ["fix44", "mongodb"] }
hotfix-web = { path = "../../crates/hotfix-web", features = ["ui"] }

hotfix-message = { path = "../../crates/hotfix-message", features = ["fix44"] }

anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
