[package]
name = "simple-new-order"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait = "0.1.73"
axum = { workspace = true }
clap = { version = "4.4.4", features = ["derive"] }
hotfix = { path = "../../crates/hotfix", features = ["mongodb", "redb"] }
hotfix-status = { path = "../../crates/hotfix-status", features = ["ui"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4"] }
