[package]
name = "simple-new-order"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
hotfix = { path = "../../crates/hotfix", features = ["fix44", "mongodb", "redb"] }
hotfix-web = { path = "../../crates/hotfix-web", features = ["ui"] }

async-trait.workspace = true
axum.workspace = true
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4"] }
